Fix card overflow (#149)

--- a/assets/sb-admin/css/_cards.scss
+++ b/assets/sb-admin/css/_cards.scss
@@ -1,3 +1,8 @@
 #card-toggle.collapsed {
     transform: rotate(180deg);
 }
+
+.card-body {
+    overflow-y: auto;
+    overflow-x: initial;
+}
